# assessor-ai

./: .env.example  README.md  config.py  main.py  pyproject.toml  requirements.txt
agents/: __init__.py  agenda.py  base.py  faq.py  financeiro.py  orquestrador.py  router.py
agents/nodes/: __init__.py  agenda.py  faq.py  financeiro.py  names.py  orquestrador.py  router.py
agents/nodes/guardrail/: __init__.py  entrada.py  saida.py  schemas.py
agents/prompts/: __init__.py  agenda.py  base.py  faq.py  financeiro.py  guardrail.py  orquestrador.py  resumidor.py  router.py
config/: decorators.py  docker.py  logging.py  models.py  settings.py
graph/: agents.py  builder.py  llm.py  state.py
tools/: __init__.py  faq_tools.py  pg_tools.py  response.py  schemas.py
tools/mongo/: connection.py  core.py  helpers.py  resumidor.py  schemas.py
tools/mongo/chats/: core.py  schemas.py
tools/mongo/users/: core.py  schemas.py
tools/postgres/: connection.py  core.py  helpers.py  schemas.py
tools/postgres/agenda/: core.py  schemas.py
tools/postgres/financeiro/: core.py
ui/: terminal.py
