[project]
name = "assessor-ai"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.5",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "anthropic==0.95.0",
    "anyio==4.13.0",
    "attrs==26.1.0",
    "certifi==2026.2.25",
    "cffi==2.0.0",
    "charset-normalizer==3.4.7",
    "cryptography==46.0.7",
    "dataclasses-json==0.6.7",
    "distro==1.9.0",
    "docstring-parser==0.18.0",
    "filetype==1.2.0",
    "frozenlist==1.8.0",
    "google-auth==2.49.2",
    "google-genai==1.73.1",
    "greenlet==3.5.1",
    "groq==0.37.1",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "httpx-sse==0.4.3",
    "idna==3.11",
    "jiter==0.14.0",
    "jsonpatch==1.33",
    "jsonpointer==3.1.1",
    "langchain==1.2.15",
    "langchain-anthropic==1.4.0",
    "langchain-classic==1.0.7",
    "langchain-community==0.4.1",
    "langchain-core==1.4.0",
    "langchain-google-genai==4.2.2",
    "langchain-groq==1.1.2",
    "langchain-protocol==0.0.15",
    "langchain-text-splitters==1.1.2",
    "langgraph==1.1.6",
    "langgraph-checkpoint==4.0.2",
    "langgraph-prebuilt==1.0.9",
    "langgraph-sdk==0.3.13",
    "langsmith==0.7.32",
    "marshmallow==3.26.2",
    "multidict==6.7.1",
    "mypy-extensions==1.1.0",
    "numpy==2.4.6",
    "orjson==3.11.8",
    "ormsgpack==1.12.2",
    "packaging==26.1",
    "propcache==0.5.2",
    "psycopg2==2.9.11",
    "pyasn1==0.6.3",
    "pyasn1-modules==0.4.2",
    "pycparser==3.0",
    "pydantic==2.13.1",
    "pydantic-core==2.46.1",
    "pydantic-settings==2.14.1",
    "pyfiglet>=1.0.4",
    "pypdf==6.12.2",
    "python-dotenv==1.2.2",
    "pyyaml==6.0.3",
    "requests==2.33.1",
    "requests-toolbelt==1.0.0",
    "rich>=15.0.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.49",
    "tenacity==9.1.4",
    "typing-extensions==4.15.0",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.2",
    "urllib3==2.6.3",
    "uuid-utils==0.14.1",
    "websockets==16.0",
    "xxhash==3.6.0",
    "yarl==1.24.2",
    "zstandard==0.25.0",
]
